--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,6 @@ description = "Convert scans of handwritten notes to PDF"
 authors = ["gumienny <mkgumienny@gmail.com>"]
 
 [dependencies]
-clap = "2.32.0"
 image = "0.19.0"
+clap = { version = "2.32.0", features = ["yaml"] }
+fbsep = { git = "https://github.com/gumienny/fbsep.git", rev = "3c02cfc" }
